--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -6,6 +6,7 @@
     font-size: 2rem;
     box-shadow: 0 1rem 1rem rgba($color-black, 0.15);
     font-family: 'Barlow';
+    font-weight: 800;
 }
 
 .display{
@@ -16,16 +17,17 @@
     flex-direction: column;
     word-wrap: break-word;
     word-break: break-all;
-    padding:3rem .5rem 1.2rem 0;
+    padding:1rem .5rem 1.2rem 0;
     align-items: flex-end;
     justify-content: space-between;
+    
 
     &-previous {
-     font-size: 1.8rem;
+     font-size: 1.6rem;
     
     }
     &-current {
-     font-size: 2.3rem;
+     font-size: 2rem;
     }
 }
 .btn {
@@ -37,6 +39,7 @@
     transition: all .2s ease-in-out;
     font-family: inherit;
     padding: 2rem;
+    
 
     &-equals,
     &-all-clear {
